# TumblerHL

./: README.md
App/Baiscs/: Cmd_Rpm.txt  ProcVis7.cpp  RpmTest2.cpp  SvVis_RPM.h  TurtleRPM.cpp
App/LineSensor/: LineSensTest.cpp  SvVisConfig.h
App/MPU/: CmdList.txt  Cmd_Kalm.txt  ImuTest2.cpp  KalmTest1.cpp  MpuTest1.cpp  MpuTest2.cpp  SvVisConfig.h  SvVis_Kalm.h
App/RpmContr/: Cmd_RpmC.txt  RPMControl.h  RPMControlMain.cpp  RpmControlDemo.cpp  RpmController.h  RpmPID.h  SimpleProfile.cpp  SvVis_RpmC.h  Sv_RpmC.h  readme.md
App/SegWay/: BalanceModules.h  Balance_IO.h  SegWay.cpp  SvVisConfig.h
App/Seminar/: DirectionTest.cpp  DistSensTest.cpp  JoyStickDrive.cpp  MotorNoVis.cpp  MotorSetup.h  MotorVis.cpp  RemoteCommands.cpp  readme.md
App/gyro/: CmdList.txt  ControlParamDemo.cpp  DistControlLab.cpp  GyroControl.h  GyroControl_main.cpp  SvVisConfig.h
App/led_strip/: CMakeLists.txt  MenueTest.cpp  readme.md
App/line_sensor/: CMakeLists.txt  CmdList.txt  Demo_LineApp.cpp  FullLineSensTest.cpp  Labyrinth.cpp  LineController.cpp  LineController.h  LineSensADC.cpp  LineSensor.cpp  LineSensor.h  Minimal_LineApp.cpp  MotorSetup.h  SvVisConfig.h  Template_LineApp.cpp
App/menues/: ButtonISR_Test.cpp  CMakeLists.txt  ExtLedStripTst.cpp  LedStripTest.cpp  MenueTest.cpp  TmbMenues.cpp  TmbMenues.h
App/patz/: CMakeLists.txt  CmdList.txt  Cmd_Dist.txt  Cmd_Gyro.txt  DistControlLab.cpp  GyroControl.h  GyroControl_main.cpp  MotorSetup.h  PatzDemo1.cpp  RpmDemo.cpp  SvVisConfig.h  SvVis_Dist.h  SvVis_Gyro.h
App/pos_control/: CmdList.txt  Controllers.h  MotorIO.h  PosControl.cpp  PosControl.h  SvVisConfig.h
App/seminar_no_vis/: MotorNoVis.cpp  MotorSetup.h  compile_all_io.cpp
App/swdev_lab/: ComplFilt.h  GyroLab2.cpp  RateLimiter.h  Robot_RGL_Technik.one  SpeedProfile.one  Trapetz_Geschw_Profil.ppt
RtEnv5/: CMakeLists.txt  README.md  pytest_tcp_server.py  sdkconfig  sdkconfig.old
RtEnv5/components/RtEnvHL/: CMakeLists.txt  ControlBasics.h  EspMotor.h  ImuAlgo.cpp  MPU_Esp.cpp  NodeLock.h  RTEnvHL.h  SvProtocol3.cpp  SvProtocol3.h  TimerHL.h  station_hl2.c
RtEnv5/components/dsp/: FloatFilt.h  Tp1Ord.h
RtEnv5/main/: CMakeLists.txt
RtEnv6/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
RtEnv6/components/RtEnvHL/: CMakeLists.txt
RtEnv6/components/RtEnvHL/commu/: SvProtocol3.cpp  SvProtocol3.h  TTMailBox.h  TmbMenues.cpp  TmbMenues.h  softap_hl.c  station_hl2.c
RtEnv6/components/RtEnvHL/core/: ControlBasics.h  Encoder2.cpp  Encoder2.h  EspMotor.cpp  EspMotor.h  Features.h  ImuAlgo.cpp  ImuAlgo.h  MPU_Esp.cpp  MPU_Esp.h  MPU_Regs.h  NodeLock.cpp  NodeLock.h  RTEnvHL.cpp  RTEnvHL.h  TimerHL.c  TimerHL.h
RtEnv6/components/RtEnvHL/led_strip/: LedStripHL.cpp  LedStripHL.h
RtEnv6/components/dsp/: Tp1Ord.h
SvVis/: CmdList.txt  Readme.md  SvVisConfig.h
TumblerPrj/: CMakeLists.txt  README.md  sdkconfig.old
TumblerPrj/inc/: BalanceControl.h  EspMotor.h  ImuAlgo.h  RTEnvHL.h  SvProtocol2.h
TumblerPrj/main/: CMakeLists.txt  RpmTest2.cpp
browse_prj/: browse_prj.cpp  browse_prj.sln  browse_prj.vcxproj  browse_prj.vcxproj.filters  readme.md
doc/: Tumbler_Conn_ESP.xlsx  hardware_20.md
mBot2/: Readme.md
mBot2/SpeedProfile/: Profile1_PC_Angabe.py  Profile1_PC_Loesung.py  RampGen1.py  RampGen2.py  Readme.md
mbTumbler/: README.md  sdkconfig
mbTumbler/Lib/: EspMotor.h  MPU_Esp.cpp  RoboLib7.cpp  RoboLib7.h  TimerHL.c  TimerHL.h
mbTumbler/main/: CMakeLists.txt  MotTest1.cpp
