
idf_component_register( SRCS "Demo_LineApp.cpp"
                             "LineController.cpp"
                             "LineSensor.cpp"
                         INCLUDE_DIRS "." 
                                      "..//components//dsp" 
                                      "..//components//RtEnvHL" )


